[package]
name = "btagsil"
description = "BTAGSIL = a Bullshit Text Adventure Game where Sky Is the Limit"
authors = ["Einax <oleksii.kshenskyi@outlook.com>"]
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.12"
